[build-system]
requires = [
  "setuptools >= 64",
  "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "scikit_mol/_version.py"
version_scheme = "post-release"

[tool.pytest.ini_options]
addopts = [
  "-v",
]

[tool.coverage.run]
source = ["scikit_mol"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if MYPY:",
  "^\\s+[.][.][.]$",
]
