[metadata]
name = scikit_mol
url = https://github.com/EBjerrum/scikit-mol
download_url = https://github.com/EBjerrum/scikit-mol
license = LGPL-3.0
license_file = LICENSE
description = scikit-learn classes for molecule transformation
long_description = file: README.md
long_description_content_type = text/markdown
author = Esben Jannik Bjerrum
author_email = esben@cheminformania.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.7
install_requires =
    rdkit
    numpy
    pandas
    scikit-learn
    packaging

[options.packages.find]
exclude =
    tests/*

[options.extras_require]
dev =
    pytest>=6
    pytest-cov
    jupytext
